--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   background-color: rgb(96, 155, 218);
   font-size: 14px;
+  font-family: "Open Sans", sans-serif;
 }
 main {
   background-color: white;
-  width: 720px;
+  width: 700px;
   margin: 50px auto;
   border-radius: 10px;
   padding: 30px;
@@ -28,7 +29,40 @@ main {
 
 .weather-section {
   margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
 }
-.current-temp {
+.day-weather-div {
   width: 60%;
 }
+.div-current-temp {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.current-temp {
+  font-size: 5em;
+  font-weight: 700;
+}
+
+.material-symbols-outlined {
+  font-size: 9em;
+  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+}
+.div-city-date {
+  padding: 0 10%;
+}
+h1 {
+  font-size: 3.4em;
+}
+.div-city-date h3 {
+  font-size: 1.6em;
+  font-weight: 400;
+}
+/* divison week weather */
+.week-weather-div {
+  width: 30%;
+}
+/*  font-family: 'Hind Siliguri', sans-serif;
+ */
