--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,9 @@ body {
 main {
   background-color: white;
   width: 620px;
-  margin: 30px auto 0px;
+  margin: 26px auto 0px;
   border-radius: 10px;
-  padding: 30px;
+  padding: 28px;
 }
 /* -------------------section search input */
 .search-section {
@@ -43,7 +43,7 @@ main {
 /* -----------------section weather display */
 
 .weather-section {
-  margin: 22px 20px 0px;
+  margin: 14px 20px 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -54,25 +54,25 @@ main {
 }
 .div-current-temp {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .current-temp {
-  font-size: 4em;
+  margin-top: 28px;
+  font-size: 3.6em;
   font-weight: 700;
 }
 .current-temp-unit {
   font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 40px;
+  font-weight: 700;
+  margin-top: 5px;
   margin-left: 5px;
 }
 
 .main-icon {
   font-size: 120px;
-  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 1, "opsz" 20;
-  margin-bottom: 20px;
-  margin-left: 10px;
+  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 20;
+  margin-left: 12px;
 }
 
 h1 {
@@ -125,8 +125,8 @@ h1 {
 }
 .week-icon {
   color: rgb(88, 21, 150);
-  font-size: 30px;
-  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 1, "opsz" 20;
+  font-size: 28px;
+  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 100, "opsz" 20;
 }
 .span-weekdays {
   margin-left: 18px;
