--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,8 @@ main {
   border-radius: 10px;
   padding: 28px;
 }
-/* -------------------section search input */
-.search-section {
+/* -------------------section form search input */
+form {
   display: flex;
   justify-content: space-between;
   margin-bottom: 26px;
