--- a/src/style.css
+++ b/src/style.css
@@ -58,21 +58,19 @@ form {
 }
 
 .current-temp {
-  margin-top: 28px;
   font-size: 3.6em;
   font-weight: 700;
 }
 .current-temp-unit {
   font-size: 16px;
   font-weight: 700;
-  margin-top: 5px;
+  margin-bottom: 20px;
   margin-left: 5px;
 }
 
 .main-icon {
-  font-size: 120px;
-  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 20;
-  margin-left: 12px;
+  width: 130px;
+  margin-left: 8px;
 }
 
 h1 {
