--- a/src/style.css
+++ b/src/style.css
@@ -102,12 +102,12 @@ h1 {
 .week-weather-div {
   width: 34%;
 }
-.week-weather-div ul {
+.forecast-week-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.week-weather-div ul li {
+.forecast-week-day {
   margin-left: 20px;
   display: flex;
   justify-content: left;
@@ -115,7 +115,7 @@ h1 {
   padding: 12px 16px;
 }
 
-.week-weather-div ul li h3 {
+.forecast-week-day h3 {
   font-size: 1.2em;
   font-weight: 600;
   margin: 0;
