--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ h1 {
 .week-weather-div {
   width: 34%;
 }
-.forecast-week-list {
+.week-weather-div ul {
   list-style: none;
   margin: 0;
   padding: 0;
