--- a/src/style.css
+++ b/src/style.css
@@ -112,7 +112,7 @@ h1 {
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 12px 16px;
+  padding: 8px 16px;
 }
 
 .forecast-week-day h3 {
@@ -122,9 +122,7 @@ h1 {
   padding-bottom: 5px;
 }
 .week-icon {
-  color: rgb(88, 21, 150);
-  font-size: 28px;
-  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 100, "opsz" 20;
+  width: 55px;
 }
 .span-weekdays {
   margin-left: 18px;
